netclientclock: Don't reset calibration of internal clock whenever a new netclient clock is created

https://bugzilla.gnome.org/show_bug.cgi?id=763325